  15-Mar-2020  - V0.11 Preliminary testing pipeline created
  16-Mar-2020  - V0.12 Preliminary deployment
  18-Mar-2020  - V0.13 Update deployment scripts
  10-Apr-2020  - V0.14 Update default failures and configuration settings
  11-Apr-2020  - V0.15 Further updates in configuration bootstrap
  15-Apr-2020  - V0.16 Add fingerprint scores to descriptor return object
  16-Apr-2020  - V0.17 Reverse the delivered order for the descriptor search results
  16-May-2020  - V0.18 Add preliminary depiction services
  28-Jun-2020  - V0.19 Updated to access dependencies created by RCSB weekly update
  28-Jun-2020  - V0.20 Add simple health check route, memory report on /status, and adjust looking to conform to gunicorn
  29-Jun-2020  - V0.21 Add log filtering options to disable logging healthcheck requests
   1-Jul-2020  - V0.22 Update documentation and dependencies
   1-Jul-2020  - V0.23 Further update of dependencies
  22-Jul-2020  - V0.24 Restore missing dev packages from fastapi[all]
  29-Sep-2020  - V0.25 Pin fastapi dependencies
  30-Sep-2020  - V0.26 Further updates on dependencies.
  23-Oct-2020  - V0.27 Add substructure search options
  10-Dec-2020  - V0.28 Add convertTools.py for molfile production from descriptors and idcodes
  11-Dec-2020  - V0.29 Avoid duplication in enums for molecule identifiers
  18-Jan-2021  - V0.30 Update dependencies
  29-Jan-2021  - V0.31 Add CORS headers and adopt to explicit fastapi dependencies
  29-Jan-2021  - V0.32 Update macos package dependencies
  29-Jan-2021  - V0.33 Adjust CORS options configuration
   3-Mar-2021  - V0.34 Update search criteria and update dependencies
   9-Jun-2021  - V0.35 Update installation configuration and update dependencies
  10-Aug-2021  - V0.37 Update FastAPI dependencies
   8-Feb-2022  - V0.38 Change /healthcheck and /alive endpoint return value to True
  12-Aug-2022  - V0.39 Support the creation of a container image of service
   9-Jan-2023  - V0.40 Configuration changes to support tox 4