@@ -41,5 +41,5 @@ jobs:
   #  parameters: {tox: 'py39', python: '3.9', os: 'macos'}
   - template: azure-template-publish-job.yml
     parameters: {tox: 'py39', python: '3.9', os: 'linux'}
-  - template: azure-template-publish-docker.yml
-    parameters: {tox: 'py39', python: '3.9', os: 'linux'}
+  # - template: azure-template-publish-docker.yml
+  #   parameters: {tox: 'py39', python: '3.9', os: 'linux'}
